--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ repositories {
 
 dependencies {
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.0"
+    testImplementation "org.assertj:assertj-core:3.19.0"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine"
 }
 
