--- a/build.gradle
+++ b/build.gradle
@@ -25,9 +25,8 @@ repositories {
 }
 
 dependencies {
-    testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.0"
+    testImplementation "junit:junit:4.13"
     testImplementation "org.assertj:assertj-core:3.19.0"
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine"
 }
 
 intellij {
@@ -38,10 +37,6 @@ intellij {
 
 patchPluginXml {
     version = project.version
-}
-
-test {
-    useJUnitPlatform()
 }
 
 sourceSets {
