--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import org.gradle.api.tasks.testing.logging.TestExceptionFormat
+import org.gradle.api.tasks.testing.logging.TestLogEvent
 import org.jetbrains.grammarkit.tasks.*
 
 buildscript {
@@ -67,4 +69,21 @@ task generateTLAplusParser(type: GenerateParser) {
     purgeOldFiles = true
 }
 
-compileJava.dependsOn(generateTLAplusLexer, generateTLAplusModuleBeginLexer, generateTLAplusParser)
+compileJava.dependsOn(
+        generateTLAplusLexer,
+        generateTLAplusModuleBeginLexer,
+        generateTLAplusParser)
+
+tasks.withType(Test) {
+    testLogging {
+        events TestLogEvent.FAILED,
+                TestLogEvent.PASSED,
+                TestLogEvent.SKIPPED,
+                TestLogEvent.STANDARD_OUT
+        exceptionFormat TestExceptionFormat.FULL
+        showExceptions true
+        showCauses true
+        showStackTraces true
+        showStandardStreams false
+    }
+}
