--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,8 @@ buildscript {
     }
 
     dependencies {
-        classpath "org.jetbrains.intellij.plugins:gradle-intellij-plugin:0.6.5"
-        classpath "gradle.plugin.org.jetbrains.intellij.plugins:gradle-grammarkit-plugin:2020.1.4"
+        classpath "org.jetbrains.intellij.plugins:gradle-intellij-plugin:1.1.3"
+        classpath "gradle.plugin.org.jetbrains.intellij.plugins:gradle-grammarkit-plugin:2021.1.3"
     }
 }
 
@@ -27,12 +27,12 @@ repositories {
 }
 
 dependencies {
-    testImplementation "junit:junit:4.13"
-    testImplementation "org.assertj:assertj-core:3.19.0"
+    testImplementation "junit:junit:4.13.2"
+    testImplementation "org.assertj:assertj-core:3.21.0"
 }
 
 intellij {
-    version "201.6668.113"
+    version = "211.7628.21"
     plugins = ["com.intellij.java", "org.intellij.intelliLang"]
     updateSinceUntilBuild = false
 }
