--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ repositories {
 }
 
 dependencies {
+    implementation files('libs/tla2tools.jar')
     testImplementation "junit:junit:4.13.2"
     testImplementation "org.assertj:assertj-core:3.21.0"
 }
