prepare to publish

--- a/build.gradle
+++ b/build.gradle
@@ -110,3 +110,7 @@ tasks.withType(Test) {
         showStandardStreams false
     }
 }
+
+publishPlugin {
+    token = findProperty("intellijPublishToken")
+}
