--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -4,12 +4,20 @@
     <vendor url="https://github.com/ocadaruma">Haruki Okada</vendor>
 
     <description><![CDATA[
-    Unofficial language plagin for TLA+ formal specification language.<br>
+    Unofficial language plugin for TLA+ formal specification language.<br>
     <em>Features:</em>
     <ul>
     <li>Syntax highlighting</li>
+    <li>Run TLC</li>
     </ul>
     ]]></description>
+
+    <change-notes><![CDATA[
+    Please visit <a href="https://github.com/ocadaruma/tlaplus-intellij-plugin/releases">GitHub Releases</a>
+    ]]>
+    </change-notes>
+
+    <idea-version since-build="211.7628.21" until-build="213.*"/>
 
     <depends>com.intellij.modules.platform</depends>
     <depends>org.intellij.intelliLang</depends>
