--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -10,6 +10,8 @@
     <li>Syntax highlighting</li>
     <li>Run TLC</li>
     </ul>
+    <br>
+    This plugin is still in early development stage.
     ]]></description>
 
     <change-notes><![CDATA[
