--- a/src/main/resources/com/mayreh/intellij/plugin/tlc_config_template.cfg
+++ b/src/main/resources/com/mayreh/intellij/plugin/tlc_config_template.cfg
@@ -15,3 +15,8 @@ NEXT Next
 (* Formulas true in every reachable state.    *)
 (**********************************************)
 \* INVARIANT MyInvariant
+
+(**********************************************)
+(* Disable checking deadlock.                 *)
+(**********************************************)
+\* CHECK_DEADLOCK FALSE
