reference resolution in tlc cfg

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -66,6 +66,8 @@
         <lang.quoteHandler
           language="TLA+"
           implementationClass="com.mayreh.intellij.plugin.tlaplus.TLAplusQuoteHandler"/>
+        <psi.referenceContributor
+          implementation="com.mayreh.intellij.plugin.tlaplus.TLAplusReferenceContributor"/>
         <notificationGroup id="TLA+ plugin" displayType="BALLOON"/>
 
         <!-- TLC config -->
