--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,20 @@ jobs:
       uses: actions/setup-java@v1
       with:
          java-version: 11
+    - name: Prepare for test
+      uses: gradle/gradle-build-action@v2
+      with:
+        arguments: listProductsReleases
     - name: Execute test
-      uses: eskatos/gradle-command-action@v1
+      uses: gradle/gradle-build-action@v2
       with:
         arguments: check
+    - name: Setup Plugin Verifier IDEs Cache
+      uses: actions/cache@v2.1.7
+      with:
+        path: ~/.pluginVerifier/ides
+        key: plugin-verifier-${{ hashFiles('build/listProductsReleases.txt') }}
+    - name: Run Plugin Verification tasks
+      uses: gradle/gradle-build-action@v2
+      with:
+        arguments: runPluginVerifier -Pplugin.verifier.home.dir=~/.pluginVerifier/ides
